# OSCAR-user

./: .gitignore  README.md  pyproject.toml
oscar/: __init__.py  cli.py  run.py
oscar/_core/: fct_calib.py  fct_genMC.py  fct_loadD.py  fct_loadP.py  fct_misc.py  mod_process.py
oscar/_io/: _download.py  _download_input.py  paths.py
oscar/_resources/: config.yaml  variables.yaml
oscar/_resources/bootstrap/: forcing_hist_default.nc  forcing_scen_default.nc  output_hist_standard.nc  parameters_mc_default.nc  scen_initial_state_standard.nc
oscar/_utils/: generate_bootstrap.py  get_SSP_drivers.py  get_drivers.py  help.py  load_config.py  metadata.py
oscar/_viz/: __init__.py  _plot_summary.py
oscar/_workflows/: configured_runs.py  default_run.py  standard_run.py  standard_runs.py
