[project]
name = "oscar"
version = "v3.3+u1"
description = "OSCAR Earth system model"
requires-python = ">=3.9"

dependencies = [
  "numpy",
  "xarray",
  "pandas",
  "scipy",
  "matplotlib",
  "pyyaml"
]

[project.scripts]
oscar = "oscar.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"